crates/hats-tui/tests/snapshots/integration_snapshots__long_output_scrolled.snap
---
source: crates/hats-tui/tests/integration_snapshots.rs
expression: harness.render_full()
---
[iter 1/1] [TIME] | — | [LIVE] | ? help
────────────────────────────────────────────────────────────────────────────────
HTTP Status line 2
HTTP Status line 3
HTTP Status line 4
HTTP Status line 5
HTTP Status line 6
HTTP Status line 7
────────────────────────────────────────────────────────────────────────────────
 Total Time Elapsed: [TIME]                                            ■ DONE
