crates/hats-tui/tests/snapshots/integration_snapshots__navigation_bounds.snap
---
source: crates/hats-tui/tests/integration_snapshots.rs
expression: snapshot
---
iteration: 0
current_view: 0
total_iterations: 1
following_latest: true
has_alert: false
alert_iteration: ~
search_query: ~
search_matches: 0
search_current_match: 0
pending_hat: —
show_help: false
