crates/hats-tui/tests/snapshots/integration_snapshots__new_iteration_alert.snap
---
source: crates/hats-tui/tests/integration_snapshots.rs
expression: snapshot
---
iteration: 0
current_view: 0
total_iterations: 3
following_latest: false
has_alert: true
alert_iteration: 3
search_query: ~
search_matches: 0
search_current_match: 0
pending_hat: —
show_help: false
