crates/hats-tui/tests/snapshots/integration_snapshots__search_next.snap
---
source: crates/hats-tui/tests/integration_snapshots.rs
expression: harness.capture_state()
---
iteration: 0
current_view: 0
total_iterations: 1
following_latest: true
has_alert: false
alert_iteration: ~
search_query: error
search_matches: 3
search_current_match: 1
pending_hat: —
show_help: false
